--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "cd src/ && npm install && npm run build"
+    "build": "cd frontend/ && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": [
