--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -20,8 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
-    "build": "cd frontend/ && npm install && npm run build"
+    "start": "node server.js"
   },
   "eslintConfig": {
     "extends": [
